# alocampus

./: .algokit.toml  CONTEXT.md  PITCH_DECK.md  README.md
projects/ai/: README.md  (+2 more)
projects/backend/: .algokit.toml  .dockerignore  .env.localnet  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
projects/backend/alembic/: env.py
projects/backend/alembic/versions/: 0001_baseline.py  0002_role_content_profile_attendance.py  0003_demo_users.py
projects/backend/app/: auth.py  config.py  main.py  rate_limit.py
projects/backend/app/api/: __init__.py  activity.py  admin.py  ai.py  analytics.py  announcements.py  attendance_records.py  auth_routes.py  certificate.py  certs.py  coordination.py  demo_auth.py  faculty.py  feedback.py  health.py  me.py  metadata.py  polls.py  profile.py  sessions.py  system.py  tx.py
projects/backend/app/domain/: models.py
projects/backend/app/seed/: __init__.py  demo_users.py
projects/backend/app/usecases/: activity_uc.py  ai_uc.py  analytics_uc.py  announcements_uc.py  attendance_records_uc.py  auth_uc.py  certificate_uc.py  certs_uc.py  coordination_uc.py  demo_auth_uc.py  feedback_uc.py  polls_uc.py  profile_uc.py  roles_uc.py  sessions_uc.py  system_uc.py  tx_uc.py
projects/contracts/: .algokit.toml  .env.localnet  README.md  pyproject.toml
projects/contracts/smart_contracts/: __main__.py  config.py
projects/contracts/smart_contracts/attendance/: contract.py
projects/contracts/smart_contracts/certificate/: contract.py
projects/contracts/smart_contracts/credential_mint/: contract.py  deploy_config.py
(+123 files in other folders)
