[tool.poetry]
name = "algocampus-backend"
version = "0.1.0"
description = "AlgoCampus BFF – FastAPI local backend for roles, tx tracking, certificate metadata, and analytics"
authors = ["AlgoCampus Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.110,<1"
uvicorn = { version = ">=0.29,<1", extras = ["standard"] }
pydantic = ">=2,<3"
pydantic-settings = ">=2,<3"
python-jose = { version = ">=3.3,<4", extras = ["cryptography"] }
py-algorand-sdk = "^2.6.0"
aiosqlite = ">=0.20,<1"
httpx = ">=0.27,<1"
python-dotenv = "^1.0.0"
python-multipart = ">=0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = ">=0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
